--- a/src/Ecentinela/ComiconvBundle/Resources/translations/messages.en.yml
+++ b/src/Ecentinela/ComiconvBundle/Resources/translations/messages.en.yml
@@ -28,7 +28,7 @@ output:
     title: Your conversion job is in queue!
     description: The conversion is an intensive work, so it can take a while. You can stay on this page until the download link appears or write down your email and we will send you a notice when the conversion is done.
     fork_me: Fork me on GitHub
-    click_to_download: Click here to download the file (%size%)
+    click_to_download: Click here to download the file (%size%mb)
     download_link_appear_here: Your download link will appear here when available
     check: Check again in <strong>%seconds%</strong> seconds
     checking: Checking...
