Added download available time to output page.

--- a/src/Ecentinela/ComiconvBundle/Resources/translations/messages.es.yml
+++ b/src/Ecentinela/ComiconvBundle/Resources/translations/messages.es.yml
@@ -29,6 +29,7 @@ output:
     description: El trabajo de conversión es intensivo, por lo que puede tomar un tiempo. Puedes permanecer en esta página esperando a que aparezca el enlace de descarga o puedes escribir tu email en el formulario inferior y te lo enviaremos cuando la conversión haya acabado.
     fork_me: Clóname en GitHub
     click_to_download: Pincha aquí para descargar el archivo (%size%mb)
+    available_until: Disponible hasta %datetime%
     download_link_appear_here: Tu enlace de descarga aparecerá aqui cuando esté disponible
     check: Se comprobará de nuevo en <strong>%seconds%</strong> segundos
     checking: Comprobando...
@@ -45,3 +46,7 @@ contact:
     text: Texto
     send: Enviar
     thank_you: Gracias
+
+email:
+    conversion_complete: La conversión del cómic que estabas esperando se ha completado.
+    conversion_link: Aquí tienes el enlace de descarga. Estará disponible hasta %datetime%.
