--- a/src/Ecentinela/ComiconvBundle/Resources/translations/messages.en.yml
+++ b/src/Ecentinela/ComiconvBundle/Resources/translations/messages.en.yml
@@ -29,6 +29,7 @@ output:
     description: The conversion is an intensive work, so it can take a while. You can stay on this page until the download link appears or write down your email and we will send you a notice when the conversion is done.
     fork_me: Fork me on GitHub
     click_to_download: Click here to download the file (%size%mb)
+    available_until: Available until %datetime%
     download_link_appear_here: Your download link will appear here when available
     check: Check again in <strong>%seconds%</strong> seconds
     checking: Checking...
@@ -51,3 +52,7 @@ contact:
     text: Text
     send: Send
     thank_you: Thank you
+
+email:
+    conversion_complete: The comic conversion you were awaiting has been complete.
+    conversion_link: Here you have the link to download the resulting file. It will be available until %datetime%.
